--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mohamadnabel.github.io/flooring-makers",
+  "homepage": "https://mohamadnabel.github.io/front-end-for-flooring-makers",
   "name": "flooring-makers",
   "version": "0.1.0",
   "private": true,
